--- a/Cosas/templates/productos.html
+++ b/Cosas/templates/productos.html
@@ -5,25 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Mi Sitio Django{% endblock %}</title>
 
-    <!-- Bootstrap CSS (CDN) -->
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
     <nav class="navbar navbar-dark bg-dark mb-4">
         <div class="container">
-            <a class="navbar-brand" href="#">Mi Proyecto Django</a>
+            <a class="navbar-brand" href="#">Django en sistema</a>
         </div>
     </nav>
 
     <div class="container">
         {% block content %}
-        <h1>¡Hola, Django!</h1>
-        <p>Este es un template base muy simple.</p>
+        <h1>¡Hola!</h1>
+        <p>Este es un template base muy simple</p>
         {% endblock %}
     </div>
 
-    <!-- Bootstrap JS (CDN) -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
